# nannou-webgpu-engine

./: Cargo.toml
nannou/nannou_core/: Cargo.toml
src/: basic.wgsl  main.rs  transform.rs
src/camera/: mod.rs  projection.rs
src/uniforms/: camera.rs  directional_light.rs  mod.rs  model.rs
src/uniforms/instance_input/: mod.rs  model_matrix.rs
src/uniforms/vertex_input/: gltf_mesh_vertex.rs  mod.rs
